# FinancialExchange

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/: CMakeLists.txt
apps/exchange/: CMakeLists.txt  main.cpp
apps/market_simulator/: CMakeLists.txt  main.cpp  market_dynamics.hpp  order_manager.hpp  pcg32.hpp  rng.hpp  shadow_order_book.hpp  simulator.hpp  state.hpp
python/: pyproject.toml
python/exchange/agents/: trader.py
python/exchange/tests/: test_exchange.py
python/exchange/util/: __init__.py
python/scripts/: analysis.py  replay.py
src/: application.cpp  application.hpp  binary_logger.hpp  callbacks.hpp  connectivity.cpp  connectivity.hpp  error.hpp  exchange.cpp  exchange.hpp  logging.hpp  main.cpp  market_data_dispatch.cpp  market_data_dispatch.hpp  order.hpp  order_book.cpp  order_book.hpp  pricelevel.hpp  protocol.hpp  ring_buffer.hpp  spsc_queue.hpp  time.cpp  time.hpp  types.hpp
